# hermes-plugins

./: .gitignore  LICENSE  README.md  pyproject.toml
bundles/hermes-planning-workflows/: README.md  bundle.yaml
docs/: development.md  install.md  invocation-guide.md  publishing-checklist.md
manifests/: hermes-planning-workflows.yaml  index.yaml
plugins/hermes-planning-guards/: README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/hermes-planning-guards/hermes_planning_guards/: __init__.py  block_env_files.py  out_of_scope_reminder.py  plugin.py
plugins/hermes-planning-guards/tests/: test_block_env_files.py  test_out_of_scope_reminder.py  test_plugin_registration.py
scripts/: package_bundle.py  smoke_install.sh  validate_skills.py
skills/autonomous-ai-agents/claude-i/: SKILL.md
skills/software-development/plan-clean/: SKILL.md
skills/software-development/plan-code/: SKILL.md
skills/software-development/plan-commit/: SKILL.md
skills/software-development/plan-doc/: SKILL.md
skills/software-development/plan-issues/: SKILL.md
skills/software-development/planning-workflows/: SKILL.md
skills/software-development/simplify/: SKILL.md
tasks/claude-plugin-parity-update/: spec.md  todo.md
tasks/claude-plugin-parity-update/reviews/: claude-opus48-xhigh-review-raw.md  claude-opus48-xhigh-review-v4-raw.md  claude-opus48-xhigh-review-v4.json  claude-opus48-xhigh-review-v5-raw.md  claude-opus48-xhigh-review-v5.json  (+13 more)
tests/: test_plan_issues_workflow.py  test_repo_layout.py  test_review_lane_policy.py  test_skill_frontmatter.py
(+203 files in other folders)
