[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-planning-guards"
version = "0.1.0"
description = "Hermes Agent planning guard hooks"
requires-python = ">=3.10"
authors = [{name = "tahara-san and contributors"}]
license = {text = "MIT"}

[project.entry-points."hermes_agent.plugins"]
hermes-planning-guards = "hermes_planning_guards"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
